Literata: Ensure text remains visible during webfont load

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,9 @@
 @import url("/fonts/iosevka-term-ss15.css");
-// @font-face {
-//   font-family: 'Inter';
-//   src: url('/fonts/variable/Inter-VariableFont_slnt,wght.ttf') format("truetype-variations");
-//   font-weight: 1 999;
-// }
 @font-face {
   font-family: 'Literata';
   src: url('/fonts/variable/Literata-VariableFont_opsz,wght.ttf') format("truetype-variations");
   font-weight: 1 999;
+  font-display: swap;
 }
 
 $bgColor: #000;
